# qwak-examples

./: .gitignore  0.9  DOCUMENTATION_IMPROVEMENTS.md  README.md  manifest.json  prompts.json  pyproject.toml
Churn Model/: predict.py
Churn Model/main/: __init__.py
Image Classifier Model/: README.md  predict.py  test_live_model.py  test_model_locally.py
Image Classifier Model/main/: __init__.py  conda.yml  model.py
RAG/: README.md  conda.yaml  test_model_locally.py  text_live_model.py
RAG/main/: __init__.py  chroma_retriever.py  dummy_data.csv  jfml_local_chat_model.py  lang_graph_chat_agent.py  model.py  rag_chain_config.yaml
apps/: README.md
apps/streamlit_demo_app/: README.md  app.py  inference.py  model_testing.py  requirements.txt
apps/streamlit_rag_demo/: README.md  app.py  chain.py  pyproject.toml  qwak_llm.py  requirements.txt  vector_store.py
apps/streamlit_rag_demo/ingestion/: data_ingestor.py  pdf_reader.py
apps/streamlit_rag_demo/ingestion/data/: Tesla-10k.txt  out.txt
bert_conda/: README.md  test_live_model.py  test_model_locally.py
bert_conda/main/: __init__.py  conda.yml  model.py
bert_conda_generative/: README.md  test_live_model.py  test_model_locally.py
bert_conda_generative/main/: __init__.py  conda.yml  model.py
catboost_churn/: README.md
catboost_churn/main/: __init__.py  conda.yml  data.csv  model.py
catboost_credit_risk/: local_testing.py
catboost_credit_risk/main/: model.py
catboost_poetry/: README.md  local_testing.py  test_model_locally.py
catboost_poetry/main/: __init__.py  model.py  pyproject.toml
churn_model_new/: README.md  remote-training-and-deployment.md  test_batch_endpoint.py  test_batch_model.py  test_live_endpoint.py  test_live_model.py  test_model_code_locally.py  test_model_locally.py
codegen_conda/: README.md  test_live_model.py  test_model_locally.py
credit_risk_streaming/: Makefile  README.md
devops_helper/: llm_finetuning_devops.ipynb  test_live_model.py  test_model_locally.py
distilgpt2_conda/: README.md  test_live_model.py  test_model_locally.py
falcon_poetry/: test_model_locally.py
falcon_poetry/main/: __init__.py  model.py  pyproject.toml
feature_set_quickstart_guide/: README.md  feature-store-setup.md  model-training-deployment.md  test_live_model.py  test_model_locally.py
feature_store/: batch_feature_set_pandas.ipynb  batch_feature_set_pyspark.ipynb  batch_feature_set_sql.ipynb  batch_feature_set_sql_transformation.ipynb  batch_feature_set_udf_transformation.ipynb  batch_feature_set_window_agg.ipynb  stream_feature_set_pandas_udf.ipynb
feature_store_risk_model/: realtime_prediction.py
flan_t5_conda/: README.md  test_live_model.py
flan_t5_finetuned_poetry/: README.md  test_live_model.py  test_model_locally.py
flan_t5_finetuned_poetry/main/: __init__.py  dataset_loader.py  helpers.py  model.py  pyproject.toml  text_dataset.py  training.py
flan_t5_poetry/: README.md  test_live_model.py  test_model_locally.py
fraud_detection/: README.md  credit-card-fraud-detection.ipynb  remote-training-and-deployment.md  test_batch_endpoint.py  test_batch_model.py  test_live_endpoint.py  test_live_model.py  test_model_code_locally.py  test_model_locally.py
gpt_neo_conda/: README.md
image_classifier/: README.md  model_qwak.py  test_live_model.py
jfrog_flan_model_xray/: test_live_model.py
llama2/: __init__.py  inference.py
llm_finetuned_t5_conda/: test_live_model.py
llm_finetuning/: llm_finetuning_devops.ipynb  test_live_model.py  test_model_locally.py
llm_t5_finetuned_poetry/: .qwakignore  test_live_model.py
llm_t5_finetuned_poetry/main/: data.csv  helpers.py  model.py  pyproject.toml
llm_t5_finetuned_poetry_new_sdk/: commands.sh
ml_applications/: 0_batch_feature_set.py  1_batch_featureset_to_batch_model.py  2_batch_model_chaining.py  3_realtime_model_chaining.py  4_realtime_models_to_feature_store.py  5_realtime_models_to_vector_store.py  connecteam_batch_fs_to_batch_model.py  lili_batch_featureset_to_batch_model.py  lili_batch_fs_to_batch_model.py
peft_alpaca_pip/: .qwakignore
pretrained_model/: churn_training_script.py  prediction_data.csv
prompts/: hot_loading.py
pythia_peft_pip/: test_model_locally.py
qa_bot_falcon_chroma/: README.md  test_live_model.py  test_model_locally.py
realtime_catboost_churn/: README.md
sentence_transformers_poetry/: Makefile  deployment.yaml  test_live_model.py
text_classification_transformer/: README.md  experimentation.ipynb  test_live_model.py  test_model_locally.py
text_classification_transformer/main/: __init__.py  model.py  pyproject.toml
titanic_conda/: README.md  test_live_model.py  test_model_locally.py
transformer_finetuning_jfrog/: README.md  jfrog_ml_demo.ipynb  test_live_model.py  test_model_locally.py
transformers_conda/: README.md  local_testing.py  test_live_model.py  test_model_locally.py
vector_store/: manage_collections.py  manage_data.py  run.py  tutorial.py  vector_example_data.csv
version_to_build/catboost_poetry/main/: __init__.py  model.py  pyproject.toml
version_to_build/huggingface_poetry/main/: __init__.py  model.py  pyproject.toml
version_to_build/log_model_huggingface_poetry/main/: model.py  pyproject.toml
version_to_build/scikit_poetry/main/: __init__.py  model.py  pyproject.toml
webinar_demo/: app.py  inference.py
whisper_speech_recognition/: README.md  conda.yml  test_live_model.py  test_live_model.sh  test_model_locally.py
xgboost_conda/: local_testing.py
(+166 files in other folders)
