[tool.poetry]
name = "credit-risk"
version = "0.1.0"
description = ""
authors = ["Qwak Team<info@qwak.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
catboost = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
