[tool.poetry]
name = "credit-risk"
version = "0.1.0"
description = ""
authors = ["Qwak Team<info@qwak.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "*"
scikit-learn = "*"
catboost = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
