[tool.poetry]
name = "t5_finetuned"
version = "0.1.0"
description = ""
authors = ["Qwak <info@qwak.com>"]

[tool.poetry.dependencies]
python = ">=3.9.13,<3.10"
pandas = "^1.5.1"
numpy = "^1.23.4"
scikit-learn = "^1.1.2"
transformers = "^4.25.1"
datasets = "^2.8.0"
accelerate = "^0.15.0"
sentencepiece = "^0.1.97"
qwak-sdk = {version = "^0.9.150", source = "qwak"}

[[tool.poetry.source]]
name = "qwak"
url = "https://qwak:A3RX55aNSpE8dCV@qwak.jfrog.io/artifactory/api/pypi/qwak-pypi/simple"
default = false
secondary = false
