[tool.poetry]
name = "Finetuning FLAN-T5 Model"
version = "0.1.0"
description = "Finetuning a FLAN-T5 on custom data using Qwak"
authors = ["Qwak <info@qwak.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pandas = "^1.3.5"
transformers = "^4.30.2"
accelerate = "^0.20.3"
xformers = "^0.0.20"
sentencepiece = "^0.1.99"
