[tool.poetry]
name = "Finetuning FLAN-T5 Model"
version = "0.1.0"
description = "Finetuning a FLAN-T5 on custom data using Qwak"
authors = ["Qwak <info@qwak.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "*"
transformers = "*"
accelerate = "*"
xformers = "*"
sentencepiece = "*"
