[tool.poetry]
name = "huggingface-template"
version = "0.1.0"
description = "A template for a distilbert model"
authors = ["JFrog ML Team<contact@jfrog.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = "^2.3.1"
pandas = ">=1.3.5"
datasets = "^2.20.0"
pyarrow = "<17.0.0"
urllib3 = "^2.2.2"
transformers = "^4.48.1"
frogml = {version = "0.10.5", extras = ["transformers"]}
qwak-core = "0.4.201"
torch = "^2.6.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
