[tool.poetry]
name = "scikit-template"
version = "0.1.0"
description = ""
authors = ["JFrog ML Team<contact@jfrog.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10, <3.12"
frogml = {version = ">=0.10.9"}
qwak-core = ">=0.4.207"
frogml-core = ">=0.0.21"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"